zig/build_output.log
install
+- install zephyria
   +- compile exe zephyria Debug native 1 errors
src/vm/generated/stencils.zig:1:1: error: unable to load 'stencils.zig': FileNotFound
src/vm/opcodes/add.zig:31:30: note: file imported here
    const stencils = @import("../generated/stencils.zig");
                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig build-exe -lz -ODebug --dep storage --dep vm --dep consensus --dep p2p --dep rpc --dep core --dep node --dep utils -Mroot=/Users/karan/zephyria/zig/src/main.zig --dep verkle-crypto -Mstorage=/Users/karan/zephyria/zig/src/storage/mod.zig --dep stencils --dep core -Mvm=/Users/karan/zephyria/zig/src/vm/main.zig --dep blst --dep core -Mconsensus=/Users/karan/zephyria/zig/src/consensus/mod.zig --dep zig-quic --dep core --dep consensus --dep encoding --dep utils --dep net_utils -Mp2p=/Users/karan/zephyria/zig/src/p2p/mod.zig --dep grpc --dep core --dep p2p --dep encoding --dep utils -Mrpc=/Users/karan/zephyria/zig/src/rpc/mod.zig --dep storage --dep encoding --dep utils -Mcore=/Users/karan/zephyria/zig/src/core/mod.zig --dep core --dep storage --dep consensus --dep p2p -Mnode=/Users/karan/zephyria/zig/src/node/mod.zig -Mutils=/Users/karan/zephyria/zig/src/utils/mod.zig -Mverkle-crypto=/Users/karan/zephyria/zig/libs/verkle-crypto/src/main.zig -Mstencils=.zig-cache/o/c68e14f65efaf6e65e99364b17fa9615/src/vm/generated/stencils.zig .zig-cache/o/03716e4678d70b6054507343873db3ef/libblst.a -ODebug -I .zig-cache/o/37bd9077cfb56e83f0ee4d8c8828a410 -I /Users/karan/zephyria/zig/libs/blst-wrapper/include -Mblst=/Users/karan/zephyria/zig/libs/blst-z/src/root.zig -ODebug --dep zig_quic -Mzig-quic=/Users/karan/zephyria/zig/libs/zig-quic/src/root.zig -Mencoding=/Users/karan/zephyria/zig/src/encoding/mod.zig -Mnet_utils=/Users/karan/zephyria/zig/src/net/mod.zig -ODebug --dep spice -Mgrpc=/Users/karan/zephyria/zig/libs/grpc-zig/src/server.zig -Mzig_quic=/Users/karan/zephyria/zig/libs/zig-quic/src/root.zig -Mspice=/Users/karan/.cache/zig/p/spice-0.0.0-3FtxfEq9AAASAwEKfAmQ4uDhc9vkuwHrRkjEeEYx1aCP/src/root.zig -lc --cache-dir .zig-cache --global-cache-dir /Users/karan/.cache/zig --name zephyria --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 9/12 steps succeeded; 1 failed
install transitive failure
+- install stencil_generator cached
|  +- compile exe stencil_generator Debug native cached 57ms MaxRSS:33M
+- install zephyria transitive failure
|  +- compile exe zephyria Debug native 1 errors
|     +- run exe stencil_generator (src/vm/generated/stencils.zig) cached
|     |  +- compile exe stencil_generator Debug native (reused)
|     |  +- compile obj stencil_arithmetic ReleaseFast native cached 58ms MaxRSS:32M
|     |  +- compile obj stencil_control ReleaseFast native cached 54ms MaxRSS:32M
|     |  +- compile obj stencil_stack ReleaseFast native cached 53ms MaxRSS:32M
|     +- WriteFile blst.h cached
|     +- compile lib blst Debug native cached 51ms MaxRSS:32M
|     +- compile lib blst Debug native (reused)
+- generate-opcode-index success

error: the following build command failed with exit code 1:
.zig-cache/o/41eec5065e79ae03136fb52e400a399a/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/karan/zephyria/zig .zig-cache /Users/karan/.cache/zig --seed 0x3362375c -Z11ea66ebe1399422 --summary all
